fixed comments to render properly without any flickering

--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -31,3 +31,8 @@
 .comment_time {
     font-size: 12px;
 }
+
+.comments_container{
+  height: 95vh;
+  overflow-y: scroll;
+}
